Rest van de website

--- a/Contact.html
+++ b/Contact.html
@@ -13,7 +13,7 @@
             <input type="checkbox" id="menu-toggle">
             <label for="menu-toggle" id="menu-icon">&#9776;</label>
             <ul id="menu">
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Bonny.html">Bonny</a></li>
                 <li><a href="Opleiding.html">Opleiding</a></li>
                 <li><a href="Werkervaring.html">Werkervaring</a></li>
