--- a/Werkervaring.html
+++ b/Werkervaring.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Homepage</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 <header>
