--- a/Beroepsproducten.html
+++ b/Beroepsproducten.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Homepage</title>
+    <title>Beroepsproducten</title>
     <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 <header>
     <div class="container">
+
         <nav>
 
             <ul id="menu">
@@ -24,14 +25,18 @@
     </div>
 </header>
 <section>
-    <div class="container">
-        <h1> Welkom op de website. Hier kun je allemaal informatie vinden over mijzelf en mijn opgedane kennis in de afgelopen jaren.</p>
-        </h1>
-        <img src="Afbeeldingen\Logo.png" width="1100" height="350" type="Logo.png" >
+    <h1>Beroepsproducten</h1>
+    <h2>Cork Project</h2>
+    <p>Voor het Cork project heb ik samen met twee andere studenten een website gemaakt, de website zelfs staat op het moment niet meer online, maar hier is een afbeelding van hoe het eruit zag.</p>
+    <img src="Afbeeldingen\Northgatehub.png" width="750" height="500" type="Northgatehub.png">
+    <p><a href="https://www.instagram.com/p/CfeGjMJt_Kw/?utm_source=ig_web_copy_link&igshid=MmJiY2I4NDBkZg==">KLIK HIER om de Cork adventure te kunnen volgen</a></p>
+
+    <h2></h2>
 
 
-        <iframe src="https://giphy.com/embed/l2JdTkHW1KZPdvdS0" width="480" height="362" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/season-15-the-simpsons-15x5-l2JdTkHW1KZPdvdS0"></a></p>
-    </div>
+
+
+
 </section>
 </body>
 </html>
