--- a/Contact.html
+++ b/Contact.html
@@ -18,6 +18,7 @@
                 <li><a href="Werkervaring.html">Werkervaring</a></li>
                 <li><a href="CV.html">CV</a></li>
                 <li><a href="Vaardigheden.html">Vaardigheden</a></li>
+                <li><a href="Beroepsproducten.html">Beroepsproducten</a></li>
                 <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
