--- a/Beroepsproducten.html
+++ b/Beroepsproducten.html
@@ -27,11 +27,26 @@
 <section>
     <h1>Beroepsproducten</h1>
     <h2>Cork Project</h2>
+
+    <p>In April van leerjaar 2 kwam nog een extra leuk project voor mij, namelijk een sustainability project in Cork. Ik werd gevraagd door Rylke Baron of ik mee wou doen aan het project en natuurlijk heb ik ja gezegd. Dit is een ‘once in a lifetime’ ervaring wat je niet snel krijgt. Voor het project hebben Patrick, Jeroen en ik een website gemaakt met database die gebruikt kan worden om alles in Cork vast te leggen. Daarnaast is het ook de bedoeling dat bedrijven en andere geïnteresseerden via de website aan informatie kunnen komen en eventuele samenwerkingen voor in de toekomst. De website wordt vervolgens ook weer overgedragen aan de volgende studenten die mee gaan doen aan het project in Cork, zodat zij dit verder kunnen uitbreiden en verbeteren! Wat wel heel erg jammer was, is dat ik ziek werd in de tweede week van Cork. Dit was ook precies de week dat er allemaal leuke activiteiten waren gepland. Echter was het alsnog een zeer leuke en leerzame ervaring waarbij ik ook veel nieuwe mensen heb ontmoet!
+    </p> <br>
     <p>Voor het Cork project heb ik samen met twee andere studenten een website gemaakt, de website zelfs staat op het moment niet meer online, maar hier is een afbeelding van hoe het eruit zag.</p>
+    <br>
+
     <img src="Afbeeldingen\Northgatehub.png" width="750" height="500" type="Northgatehub.png">
     <p><a href="https://www.instagram.com/p/CfeGjMJt_Kw/?utm_source=ig_web_copy_link&igshid=MmJiY2I4NDBkZg==">KLIK HIER om de Cork adventure te kunnen volgen</a></p>
 
-    <h2></h2>
+    <h1> Stage projecten</h1>
+
+    <p>Tijdens mijn stagetijd heb ik ook een aantal projecten uitgevoerd. Deze projecten waren gebasseerd op de kerntaken 'Automatiseren van Processen' en 'Ontwerpen van een Kennisitem'. Hieronder is een globale uitleg van de projecten. U kunt uitgebreidere informatie vinden in het eindverslag. i.v.m. AVG is het niet mogelijk om alle projecten uitgebreid op de website terug te vinden.</p>
+    </p>
+
+    <h3> Automatiseren van Processen</h3>
+    <p>Één van de klanten van Dustin belde wel vaker betreft het probleem dat nu Microsoft Office 365 in het Engels stond in plaats van in het Nederlands. Meestal pasten wij dit dan handmatig aan via powershell, maar om deze extra handeling te vermijden om tijd te winnen heeft Arjen aangegeven om te kijken naar een mogelijkheid tot het automatiseren van dit proces.
+        Het uiteindelijke doel van het proces is om ervoor te zorgen dat de Citrix omgeving waarin de medewerkers terecht komen met alle Microsoft Office 365 pakketten in het Nederlands staan met de juiste datum notatie. Het staat namelijk allemaal standaard in het Engels met een niet Europese datum notatie.</p>
+
+    <h3> Ontwerpen van een KennisItem</h3>
+    <p>Samen met mijn collega’s en begeleider Arjen Anneveldt zijn de onderwerpen van de kerntaken tot stand gekomen om onderzoek te doen naar verschillende onderwerpen binnen Dustin. In het verslag kunt u het gekozen informatievoorzieningsontwerp treffen die helpt met het overzetten van alle TopDesk kennisItems die in de toekomst overgezet zal moeten worden. Verder is er voor het automatiseren van een benodigde functie binnen in een organisatie gekozen voor een script die aangepast moest worden. Dit is tot stand gekomen aan de hand van vakere binnenkomende oproepen van één van de Dustin klanten. Tot slot is er database van het begin af aan gemaakt waarin het mogelijk is om een checklijst bij te houden voor interne medewerkers die standaard benodigdheden nodig hebben om te zorgen dat zij gelijk aan de slag kunnen op hun eerste werkdag.</p>
 
 
 
