Afbeeldingen kleine letters aangepast voor hamster en northgate

--- a/Beroepsproducten.html
+++ b/Beroepsproducten.html
@@ -33,7 +33,7 @@
     <p>Voor het Cork project heb ik samen met twee andere studenten een website gemaakt, de website zelfs staat op het moment niet meer online, maar hier is een afbeelding van hoe het eruit zag.</p>
     <br>
 
-    <img src="Afbeeldingen\Northgatehub.png" width="750" height="500" type="Northgatehub.png">
+    <img src="Afbeeldingen\Northgatehub.png" width="750" height="500" type="northgatehub.png">
     <p><a href="https://www.instagram.com/p/CfeGjMJt_Kw/?utm_source=ig_web_copy_link&igshid=MmJiY2I4NDBkZg==">KLIK HIER om de Cork adventure te kunnen volgen</a></p>
 
     <h1> Stage projecten</h1>
