--- a/Bonny.html
+++ b/Bonny.html
@@ -44,8 +44,8 @@
 
         <div class="responsive">
             <div class="gallery">
-                <a target="_blank" href="Family2.png">
-                    <img src="Afbeeldingen\Family2.png" width="750" height="250" type="Logo.png">
+                <a target="_blank" href="family2.png">
+                    <img src="Afbeeldingen\family2.png" width="750" height="250" type="Logo.png">
                 </a>
                 <div class="desc">Mijn lieve schoonfamilie!</div>
             </div>
@@ -101,7 +101,7 @@
         <div class="responsive">
             <div class="gallery">
                 <a href="https://www.instagram.com/p/B9d3N-_gMsA/">
-                    <img src="Afbeeldingen\Ash1.png" width="750" height="250" type="Logo.png">
+                    <img src="Afbeeldingen\ash1.png" width="750" height="250" type="Logo.png">
                 </a>
                 <div class="desc">Chubby hamster (Ash)</div>
             </div>
